--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install Packages
       shell: bash
       run: |
-        sudo apt-get -qqy update && sudo apt-get -qqy install e2fsprogs debootstrap coreutils dosfstools zip pigz fdisk kpartx mount uuid-runtime lvm2 git && git config --global --add safe.directory '*'
+        sudo apt-get -qqy update && sudo apt-get -qqy install file e2fsprogs debootstrap coreutils dosfstools zip pigz fdisk kpartx mount uuid-runtime lvm2 git && git config --global --add safe.directory '*'
     - name: Checkout
       uses: actions/checkout@v4
       with:
